--- a/menu/templates/base.html
+++ b/menu/templates/base.html
@@ -13,7 +13,7 @@
 
   {% include 'navbar.html' %}
 
-  <div class="container m-3">
+  <div class="mt-5 offset-md-3 col-md-6">
     {% block content %}
     {% endblock %}
   </div>
