--- a/menu/templates/base.html
+++ b/menu/templates/base.html
@@ -13,9 +13,21 @@
 
   {% include 'navbar.html' %}
 
-  <div class="mt-5 offset-md-3 col-md-6">
+  <div class="container">
+    <br />
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+
+    {% endfor %}
+    {% endif %}
+
     {% block content %}
-    {% endblock %}
+    {% endblock%}
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
