--- a/menu/templates/navbar.html
+++ b/menu/templates/navbar.html
@@ -42,6 +42,9 @@
 
         {% else %}
         <li class="nav-item">
+          <a href="{% url 'home' %}" class="nav-link">login</a>
+        </li>
+        <li class="nav-item">
           <a href="{% url 'register' %}" class="nav-link">register</a>
         </li>
         {% endif %}
