--- a/menu/templates/base.html
+++ b/menu/templates/base.html
@@ -17,7 +17,7 @@
     <br />
     {% if messages %}
     {% for message in messages %}
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <div class="alert alert-dismissible fade show" role="alert">
       {{ message }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
