--- a/menu/templates/add_item.html
+++ b/menu/templates/add_item.html
@@ -4,7 +4,7 @@
 <div class="col-md-6 offset-md-3">
   <h1>Add Item</h1>
 
-  <form method="post" action="{% url 'add_record' %}">
+  <form method="POST" action="{% url 'add_item' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <br>
