--- a/menu/templates/navbar.html
+++ b/menu/templates/navbar.html
@@ -37,6 +37,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
         <li class="nav-item">
+          <a href="{% url 'add_item' %}" class="nav-link">add item</a>
+        </li>
+        <li class="nav-item">
           <a href="{% url 'logout' %}" class="nav-link">logout</a>
         </li>
 
