--- a/menu/templates/add_item.html
+++ b/menu/templates/add_item.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <br>
-    <button type="submit">Add Item</button>
+    <button type="submit" class="btn btn-info"> + Add Item</button>
     <a href="{% url 'home' %}" class="btn btn-secondary m-3">back</a>
   </form>
 </div>
