--- a/menu/templates/menu_item.html
+++ b/menu/templates/menu_item.html
@@ -21,7 +21,7 @@
       </div>
       <div class="card-footer">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end m-3">
-          <a href="{% url 'home' %}" class="btn btn-secondary">back</a>
+          <a href="{% url 'home' %}" class="btn btn-secondary">← back</a>
           <a href="{% url 'menu_item' menu_item.id %}" class="btn btn-primary">update</a>
           <a href="{% url 'delete_item' menu_item.id %}" class="btn btn-danger">delete</a>
         </div>
