--- a/menu/templates/navbar.html
+++ b/menu/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'home' %}">KOPHEE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -6,60 +6,23 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
-      <!--   <li class="nav-item"> -->
-      <!--     <a class="nav-link active" aria-current="page" href="#">Home</a> -->
-      <!--   </li> -->
-      <!--   <li class="nav-item"> -->
-      <!--     <a class="nav-link" href="#">Link</a> -->
-      <!--   </li> -->
-      <!--   <li class="nav-item dropdown"> -->
-      <!--     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
-      <!--       Dropdown -->
-      <!--     </a> -->
-      <!--     <ul class="dropdown-menu"> -->
-      <!--       <li><a class="dropdown-item" href="#">Action</a></li> -->
-      <!--       <li><a class="dropdown-item" href="#">Another action</a></li> -->
-      <!--       <li> -->
-      <!--         <hr class="dropdown-divider"> -->
-      <!--       </li> -->
-      <!--       <li><a class="dropdown-item" href="#">Something else here</a></li> -->
-      <!--     </ul> -->
-      <!--   </li> -->
-      <!--   <li class="nav-item"> -->
-      <!--     <a class="nav-link disabled">Disabled</a> -->
-      <!--   </li> -->
-      <!-- </ul> -->
-      <!-- <form class="d-flex" role="search"> -->
-      <!--   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-      <!--   <button class="btn btn-outline-success" type="submit">Search</button> -->
-      <!-- </form> -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
         <li class="nav-item">
           <a href="{% url 'add_item' %}" class="btn btn-outline-success btn-sm">+ add item</a>
         </li>
-        <!-- <li class="nav-item"> -->
-        <!--   <a href="{% url 'logout' %}" class="nav-link">logout</a> -->
-        <!-- </li> -->
-
         {% else %}
-        <!-- <li class="nav-item"> -->
-        <!--   <a href="{% url 'home' %}" class="nav-link">login</a> -->
-        <!-- </li> -->
-        <!-- <li class="nav-item"> -->
-        <!--   <a href="{% url 'register' %}" class="nav-link">register</a> -->
-        <!-- </li> -->
+        <br>
         {% endif %}
       </ul>
       <div class="d-flex" role="search">
         {% if user.is_authenticated %}
         <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
         <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-        <a href="{% url 'logout' %}" class="btn btn-outline-danger" type="submit">logout</a>
+        <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm" type="submit">logout</a>
         {% else %}
-        <a href="{% url 'home' %}" class="btn btn-outline-info me-3">login</a>
-        <a href="{% url 'register' %}" class="btn btn-outline-success">register</a>
+        <a href="{% url 'home' %}" class="btn btn-sm btn-outline-info me-3">login</a>
+        <a href="{% url 'register' %}" class="btn btn-sm btn-outline-success">register</a>
         {% endif %}
 
       </div>
