feat: update menu item

--- a/menu/templates/navbar.html
+++ b/menu/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark m-1 rounded">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'home' %}">KOPHEE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,7 +24,6 @@
         <a href="{% url 'home' %}" class="btn btn-sm btn-outline-info me-3">login</a>
         <a href="{% url 'register' %}" class="btn btn-sm btn-outline-success">register</a>
         {% endif %}
-
       </div>
     </div>
   </div>
