--- a/menu/templates/navbar.html
+++ b/menu/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark m-1 rounded">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}">KOPHEE</a>
+    <a class="navbar-brand" href="{% url 'logout' %}">KOPHEE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,7 +12,9 @@
           <a href="{% url 'add_item' %}" class="btn btn-outline-success btn-sm">+ add item</a>
         </li>
         {% else %}
-        <br>
+        <li class="nav-item">
+          <!-- <a href="{% url 'home' %}" class="btn btn-sm btn-outline-info me-3">home</a> -->
+        </li>
         {% endif %}
       </ul>
       <div class="d-flex" role="search">
@@ -21,8 +23,8 @@
         <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
         <a href="{% url 'logout' %}" class="btn btn-outline-danger btn-sm" type="submit">logout</a>
         {% else %}
-        <a href="{% url 'home' %}" class="btn btn-sm btn-outline-info me-3">login</a>
-        <a href="{% url 'register' %}" class="btn btn-sm btn-outline-success">register</a>
+        <a href="{% url 'login' %}" class="btn btn-sm btn-outline-info me-3">login</a>
+        <!-- <a href="{% url 'register' %}" class="btn btn-sm btn-outline-success">register</a> -->
         {% endif %}
       </div>
     </div>
