--- a/menu/templates/order.html
+++ b/menu/templates/order.html
@@ -1,5 +1,4 @@
-<!-- {% extends 'base.html' %} -->
-{% block content %}
+{% extends 'base.html' %}
 
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
